Fix (fullPost): Fix file preview not rendering on first open; fix inability to scroll file codes when overflown

--- a/frontend/src/styles/FileUpload.css
+++ b/frontend/src/styles/FileUpload.css
@@ -335,3 +335,7 @@
 .file-panel .return-to-post-button:hover {
     background-color: #3c5075;
 }
+
+.no-scroll {
+    overflow: hidden; 
+  }
